kubernetes/main/apps/network/external-services/truenas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: network
spec:
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: network
subsets:
  - addresses:
      - ip: 10.1.10.210
    ports:
      - port: 80
