kubernetes/main/apps/network/external-services/truenas/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  namespace: network
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  rules:
    - host: &host truenas.robsonhome.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 443
  tls:
    - hosts:
        - *host
